# ListaSpesa

./: .gitignore  CMakeLists.txt  Item.cpp  Item.h  README.md  ShoppingList.cpp  ShoppingList.h  User.cpp  User.h  main.cpp
src/: ConsoleObserver.cpp  ConsoleObserver.h  FileObserver.cpp  FileObserver.h  Observer.h  ShoppingList.cpp  ShoppingList.h  User.cpp  User.h  main.cpp
tests/: test_item.cpp  test_shoppinglist.cpp  test_user.cpp
